Cover the discovery paths and clear the Sonar gate
The PR 96 gate failed on one condition: new_coverage 44.3% against a
threshold of 80%. Every other condition, including all three ratings,
already passed.

Coverage 47.0% -> 80.3% across the whole project, 95.1% over the set
Sonar measures. Notably DiscoveryServiceImpl goes 23.5% -> 95.9%, via a
test that runs a real discovery against a TLS endpoint served from the
JVM under test -- until now nothing asserted that a scan actually stores
the certificate it finds.

New tests cover KeySizeUtil, X509ObjectToString, UuidGenerator,
DiscoveryKind, the DiscoverIpHandler URL expansion, the
AttributeServiceImpl definitions and validation, and the synchronous
side of the discovery lifecycle.

Coverage exclusions are deliberately narrower than the sibling
connectors': only framework glue with no branching logic (bootstrap,
thin delegating controllers, JPA entities, the data holder, the
exception-to-status mappings, the debug-only aspect) and the Flyway Java
migration, which needs a populated database. config/** and enums/** are
kept in, unlike ejbca-ng, because they hold real logic and are now
tested. The exclusions are not load-bearing for the gate: the whole
project clears 80% without them.

Sonar findings fixed on impact:
- DiscoverIpHandler recompiled six regexes inside the parse loops, which
  a subnet or port-range scan runs thousands of times. Hoisted to static
  finals.
- ConnectionServiceImpl was @Transactional while performing no
  persistence, taking a pooled database connection for every scanned
  URL. Removed.
- Lookup methods that throw NotFoundException now state
  noRollbackFor explicitly. Spring already behaves this way for checked
  exceptions, so this documents the contract rather than changing it.
- Unused private enum constructor, Collectors.toList -> Stream.toList,
  and an anonymous HostnameVerifier that is a lambda.

The meta columns gain an explicit length. The schema declares them TEXT,
but the mapping