@@ -11,7 +11,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class ExceptionHandlingAdvice {
@@ -67,7 +66,7 @@ public class ExceptionHandlingAdvice {
 
         return ex.getErrors().stream()
                 .map(ValidationError::getErrorDescription)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
